#48 Fix spacing

--- a/practices/practice-one/src/styles/components/form-control.css
+++ b/practices/practice-one/src/styles/components/form-control.css
@@ -78,9 +78,6 @@
     text-align: left;
 }
 
-.form-control .form-control-input .form-control-input-value {
-}
-
 .form-control .form-control-input.edit .pesudo {
     display: none;
 }
